--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,1 +1,92 @@
-<p>category-list works!</p>
+<nav class="mb-5">
+  <ol class="breadcrumb  bg-light rounded px-3 py-2">
+    <li class="breadcrumb-item">
+      <a routerLink="/">Home</a>
+    </li>
+    <li class="breadcrumb-item active">
+      <a>Categorias</a>
+    </li>
+  </ol>
+</nav>
+
+<div class="row mb-4">
+  <div class="col-md">
+    <h1 class="h2 border-start ps-2">
+      Categorias
+    </h1>
+  </div>
+  <div class="col-md text-end">
+    <a routerLink="new" class="btn btn-success float-end"> + Nova Categoria</a>
+  </div>
+</div>
+
+<table class="table table-hover">
+  <thead class="bg-primary text-light">
+    <tr>
+      <th scope="col">Categorias</th>
+      <th scope="col">Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <strong>Lazer</strong> <br>
+        <small>Cinema, parque, praia</small>
+      </td>
+      <td>
+        <a
+        [routerLink]="['/categories', 12, 'edit']"
+          class="btn btn-outline-info btn-sm me-2"
+        >
+          Editar
+        </a>
+        <a
+
+          class="btn btn-outline-danger btn-sm"
+        >
+          Excluir
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>Lazer</strong> <br>
+        <small>Cinema, parque, praia</small>
+      </td>
+      <td>
+        <a
+        [routerLink]="['/categories', 12, 'edit']"
+          class="btn btn-outline-info btn-sm me-2"
+        >
+          Editar
+        </a>
+        <a
+
+          class="btn btn-outline-danger btn-sm"
+        >
+          Excluir
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>Lazer</strong> <br>
+        <small>Cinema, parque, praia</small>
+      </td>
+      <td>
+        <a
+        [routerLink]="['/categories', 12, 'edit']"
+          class="btn btn-outline-info btn-sm me-2"
+        >
+          Editar
+        </a>
+        <a
+
+          class="btn btn-outline-danger btn-sm"
+        >
+          Excluir
+        </a>
+      </td>
+    </tr>
+  </tbody>
+</table>
